# aleodscorner

./: .gitignore  Cargo.toml  README.md  flake.nix  fly.toml  justfile
templates/: Cargo.toml
templates/src/: lib.rs
templates/templates/: error.rs.html
templates/templates/pages/: header.rs.html
templates/templates/pages/cv/: _competance.rs.html  _formation.rs.html  _layout.rs.html  _normal.rs.html  _print.rs.html  content.rs.html  dev_content.rs.html  dev_settings.rs.html  header.rs.html  nav.rs.html  page_content.rs.html  page_nav.rs.html  settings.rs.html  sidebar.rs.html
templates/templates/pages/home/: articles.rs.html  content.rs.html  header.rs.html  page_nav.rs.html  projects.rs.html
templates/templates/utils/: default_footer.rs.html  default_header.rs.html  doctype.rs.html  expandable_sidebar.rs.html  expendable_nav.rs.html  page.rs.html  page_header.rs.html  page_styles_link.html
templates/templates/utils/components/: bar.rs.html  expandable.rs.html  icolink.rs.html  ih1.rs.html  ih2.rs.html  ilink.rs.html  nav_link.rs.html
templates/templates/utils/icons/: activity.rs.html  airplane.rs.html  airplane_engines.rs.html  airplane_engines_fill.rs.html  airplane_fill.rs.html  alarm.rs.html  alarm_fill.rs.html  alexa.rs.html  align_bottom.rs.html  align_center.rs.html  align_end.rs.html  align_middle.rs.html  align_start.rs.html  align_top.rs.html  alipay.rs.html  alphabet.rs.html  alphabet_uppercase.rs.html  alt.rs.html  amazon.rs.html  amd.rs.html  android.rs.html  android2.rs.html  app.rs.html  app_indicator.rs.html  apple.rs.html  archive.rs.html  archive_fill.rs.html  arrow_90deg_down.rs.html  arrow_90deg_left.rs.html  arrow_down.rs.html  (+2020 more)
(+52 files in other folders)
