[package]
name = "server"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "./templates", "./data" ]
exclude = []


[workspace.dependencies.axum]
version = "0.7"
features = ["ws", "query"]

[workspace.dependencies]
serde = "1.0"
serde_derive = "1.0"


[dependencies]
axum.workspace = true
serde.workspace = true
serde_derive.workspace = true
templates.path = "./templates"
data.path  = "./data" 
axum-htmx = "0.5.0"
axum-macros = "0.4"
cached = "0.46"
hyper = "1.0"
tower = "0.4.13"
tower-livereload = "0.9"

[dependencies.tower-http]
version = "0.5"
features = ["fs"]

[dependencies.tokio] 
version = "1.33.0"
features = ["full"]
