[package]
name = "templates"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "src/build.rs"

[build-dependencies.ructe]
version = "0.17"
features = ["mime03"]

[dependencies]
axum.workspace = true
serde.workspace = true
